2007-08-28  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/Makefile.am:

	Add network light icons to the build.

2007-08-28  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/network-light-off.png:
	* src/pixmaps/network-light-on.png:
	* src/pixmaps/network-light.png:
	* src/xml/network-light-desc.xml:

	Setup the icons for the network light service. Courtesy of Tango
	project.

2007-08-27  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/xml/SwitchPower-scpd.xml:

	Correct a typo in SwitchPower SCPD.

2007-08-27  Zeeshan Ali  <zeenix@gstreamer.net>

	* configure.ac:
	* NEWS:

	Bump up the version to 0.1.2 and update the NEWS file.

	* src/universal-cp-gui.c:

	Fix the treeview headers that broke because of recent changes.

2007-08-27  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light.c:

	Implement SwitchPower service.

2007-08-27  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light.c:

	Add a variable for light status.

2007-08-27  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light.c:

	Remove unneeded prints and use g_warning for warnings.

2007-08-27  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light.c:
	* src/universal-cp-actiondialog.c:
	* src/universal-cp-actiondialog.h:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-devicetreeview.h:
	* src/universal-cp-gui.c:
	* src/universal-cp-gui.h:
	* src/universal-cp.c:
	* src/universal-cp.h:

	Fix copyright notice.

2007-08-27  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light.c:

	No need to print "damn". :)

2007-08-27  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/network-light.png:

	Add icon for network light.

2007-08-27  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/xml/Dimming-scpd.xml:
	* src/xml/SwitchPower-scpd.xml:
	* src/xml/network-light-desc.xml:

	Add xml for network light.
